Added more recipes
added two more recipes, with images to this project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>recipes</h1>
-    <a href="/recipes/classic_pancakes.html">Classic Pancakes</a>
+    <img src="/img/pusheen-drinking.gif" alt="pusheen gif eating fast food">
+    <ul>
+        <li><a href="/recipes/classic_pancakes.html">Classic Pancakes</a></li>
+        <li><a href="/recipes/arepas_con_queso.html">Arepas con Queso</a></li>
+        <li><a href="/recipes/chicken_fingers.html">chicken Fingers</a></li>
+    </ul>
+    
 </body>
 </html>
