--- a/recipes/classic_pancakes.html
+++ b/recipes/classic_pancakes.html
@@ -28,8 +28,8 @@
     <h3>Steps</h3>
     <ol>
         <li>In one bowl, combine dry ingredients: flour, sugar, baking powder, baking soda, and salt. Whisk to combine.</li>
-        <li>In another bowl, combine eggs, vegetable oil, and whole milk. Optional: you can also add ½ teaspoon of vanilla extract here. Whisk to combine.</li>
-        <li>Combine the two bowls and mix together gently with a rubber spatula. The batter should still be lumpy with a few dry streaks of flour. Don’t overmix the pancakes!</li>
+        <li>In another bowl, combine eggs, vegetable oil, and whole milk. Optional: you can also add 1/2 teaspoon of vanilla extract here. Whisk to combine.</li>
+        <li>Combine the two bowls and mix together gently with a rubber spatula. The batter should still be lumpy with a few dry streaks of flour. Don't overmix the pancakes!</li>
         <li>Cover the batter and let it rest at room temperature for 10 minutes.</li>
         <li>Heat 1 teaspoon of vegetable oil in a nonstick skillet.</li>
         <li>Ladle one scoop of batter into the skillet and cook for a few minutes. Once bubbles appear on the surface and around the edge of the pancake, cook and flip for a few minutes more.</li>
