Fixed link issue
Fixed issue in index.html were links weren't working properly

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>recipes</h1>
-    <img src="/img/pusheen-drinking.gif" alt="pusheen gif eating fast food">
+    <img src="/odin-recipes/img/pusheen-drinking.gif" alt="pusheen gif eating fast food">
     <ul>
-        <li><a href="/recipes/classic_pancakes.html">Classic Pancakes</a></li>
-        <li><a href="/recipes/arepas_con_queso.html">Arepas con Queso</a></li>
-        <li><a href="/recipes/chicken_fingers.html">chicken Fingers</a></li>
+        <li><a href="/odin-recipes/recipes/classic_pancakes.html">Classic Pancakes</a></li>
+        <li><a href="/odin-recipes/recipes/arepas_con_queso.html">Arepas con Queso</a></li>
+        <li><a href="/odin-recipes/recipes/chicken_fingers.html">chicken Fingers</a></li>
     </ul>
     
 </body>
