--- a/recipes/arepas_con_queso.html
+++ b/recipes/arepas_con_queso.html
@@ -7,9 +7,9 @@
     <title>Arepas con Queso</title>
 </head>
 <body>
-    <a href="../index.html">&#60;- home</a>
+    <a href="/odin-recipes/index.html">&#60;- home</a>
     <h1>Arepas con Queso</h1>
-    <img src="/img/arepas_con_queso.jpg" alt="photo of delicious looking arepas" width="800">
+    <img src="/odin-recipes/img/arepas_con_queso.jpg" alt="photo of delicious looking arepas" width="800">
     <h3>Description</h3>
     <p>these are the Arepas con Queso from the disney movie encanto, this recipe is made by <a href="https://www.bingingwithbabish.com/recipes/arepas-con-queso-encanto">binging with babish</a>, after watching encanto i'm sure eveyone wanted to try maribels moms magical arepas, while these won't heal you, they sure are delicius so lets get started</p>
     <h3>Ingredients</h3>
