--- a/recipes/chicken_fingers.html
+++ b/recipes/chicken_fingers.html
@@ -7,9 +7,9 @@
     <title>Chicken Fingers</title>
 </head>
 <body>
-    <a href="../index.html">&#60;- home</a>
+    <a href="/odin-recipes/index.html">&#60;- home</a>
     <h1>Chicken Fingers</h1>
-    <img src="/img/chicken_fingers.jpg" alt="photo of delicious looking chicken fingers" width="800">
+    <img src="/odin-recipes/img/chicken_fingers.jpg" alt="photo of delicious looking chicken fingers" width="800">
     <h3>Description</h3>
     <p>like the rest of the recipes on my site, this recipe is made by <a href="https://www.bingingwithbabish.com/recipes/classicpancakes?rq=pancakes">binging with babish</a>, everybody loves chicken figners, so follow along as we some chicken fingers from the tv show comunity</p>
     <h3>Ingredients</h3>
