--- a/recipes/classic_pancakes.html
+++ b/recipes/classic_pancakes.html
@@ -7,9 +7,9 @@
     <title>Classic Pancakes</title>
 </head>
 <body>
-    <a href="../index.html">&#60;- home</a>
+    <a href="/odin-recipes/index.html">&#60;- home</a>
     <h1>Classic Pancakes</h1>
-    <img src="/img/classic_pancakes.jpg" alt="photo of delicious looking pancakes">
+    <img src="/odin-recipes/img/classic_pancakes.jpg" alt="photo of delicious looking pancakes">
     <h3>Description</h3>
     <p>Classic pancake recipe we all know and love, this recipe is made by <a href="https://www.bingingwithbabish.com/recipes/classicpancakes?rq=pancakes">binging with babish</a>, it is truly one of my favorite breakfast time recipes and can be made anywhere with just a handfull of ingredients.</p>
     <h3>Ingredients</h3>
